--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -14,35 +14,13 @@
     Requires PHP:
 */
 /*-- ============================ Fonts ============================= */
-@font-face {
-    font-family: tfont;
-    src: url("../font/Poppins-Regular.ttf")
-}
-@font-face {
-    font-family: tmedium;
-    src: url("../font/Poppins-Medium.ttf")
-}
-@font-face {
-    font-family: tbold;
-    src: url("../font/Poppins-ExtraBold.ttf")
-}
+@font-face { font-family: tfont; src: url("../font/Poppins-Regular.ttf")}
+@font-face { font-family: tmedium; src: url("../font/Poppins-Medium.ttf")}
+@font-face { font-family: tbold; src: url("../font/Poppins-ExtraBold.ttf")}
 /*-- ============================ Base ============================= */
-*, ::after, ::before{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style-type: none;
-}
-body{
-    scroll-behavior: smooth;
-    font-family: var(--body-font);
-    font-size: 1.4rem;
-    color: var(--body-text-color);
-}
-html{
-    text-rendering: optimizeLegibility;
-    font-size: 62.5%;
-}
+*, ::after, ::before{ margin: 0; padding: 0; box-sizing: border-box; list-style-type: none;}
+body{ scroll-behavior: smooth; font-family: var(--body-font); font-size: 1.4rem; color: var(--body-text-color);}
+html{ text-rendering: optimizeLegibility; font-size: 62.5%;}
 
 :root{
     /* Custom Color */
@@ -55,161 +33,86 @@ html{
     --btn-bg-color:#656667;
     --footer-bg-color:#3D3D3D;
     --body-text-color:#404852;
+    --post-section-bg-color:#EFEFEF;
     /* Typography */
     --body-font:tfont;
     --body-medium-font:tmedium;
     --body-bold-font:tbold;
 }
 /*-- ============================ Reusable Component ============================= */
-.container{
-    max-width: 119.5rem;
-    padding: 0 2%;
-    margin: 0 auto;
-}
-h1, h2, h3, h4, h5{
-    font-family: var(--body-font);
-    color: var(--body-text-color);
-}
-ul li{
-    list-style-type: none;
-}
-a{
-    text-decoration: none;
-    color: var(--body-text-color);
-}
-img{
-    width: 100%;
-    display: block;;
-}
-.grid-group{
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-gap: 5rem;
-    justify-items: center;
-    /* text-align: center; */
-}
-.section-title{
-    color: var(--black-color);
-    font-size: 4.5rem;
-    text-align: center;
-}
-.section-details{
-    margin-top: 2rem;
-    line-height: 3rem;
-}
-.btn,
-.btn-2{
-    padding: 0.8rem 2rem;
-    color: var(--white-color);
-    font-size: 1.4rem;
-    font-family: var(--heading-font);
-    border-radius: 2rem;
-}
-.btn{
-    background: var(--theme-color);
-}
-.btn-2{
-    background: var(--btn-bg-color);
-}
-.btn:hover{
-    background: var(--btn-bg-color);
-    transition: all 0.3s ease;
-}
-.btn-2:hover{
-    background: var(--theme-color);
-    transition: all 0.3s ease;
-}
+.container{ max-width: 119.5rem; padding: 0 2%; margin: 0 auto;}
+h1, h2, h3, h4, h5{ font-family: var(--body-font); color: var(--body-text-color);}
+ul li{ list-style-type: none;}
+a{ text-decoration: none; color: var(--body-text-color);}
+img{ width: 100%; display: block;}
+button{ outline: none; border: none;}
+.row{ display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 3rem; align-items:end; align-items: center;}
+.col_1_of_2{ flex-basis: 49.5%;}
+.grid{ display: grid; grid-template-columns: repeat(5, 1fr); grid-gap: 5rem; justify-items: center;}
+.section-title{ color: var(--black-color); font-size: 4.5rem; text-align: center;}
+.section-details{ margin-top: 2rem; line-height: 3rem;}
+.item-title{ font-size: 1.8rem; font-weight: bold;}
+.btn, .btn-2{ padding: 0.8rem 2rem; color: var(--white-color); font-size: 1.4rem; font-family: var(--heading-font); border-radius: 2rem;}
+.btn{ background: var(--theme-color);}
+.btn-2{ background: var(--btn-bg-color);}
+.btn:hover{ background: var(--btn-bg-color); transition: all 0.3s ease;}
+.btn-2:hover{ background: var(--theme-color); transition: all 0.3s ease;}
 
 
 /*-- ============================ header ============================= */
-#header{
-    padding: 1.5rem 0;
-    background: #f1f1fa;
-}
-#navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.logo{
-    width: 20.4rem;
-    height: 5.8rem;
-}
-#navbar .group{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.nav-button{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.nav-button a{
-    margin-left: 2rem;
-}
-.menu{
-    margin: 0 2rem;
-}
-.menu ul{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-}
-.login-group{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 2rem;
-    font-weight: 900;
-    /* background: #000; */
-}
-.nav-color-txt{
-    color: var(--light-pink-color);
-}
-
-.menu ul a,
-.login-group a,
-.nav-color-txt{
-    padding: 1.2rem;
-}
-
-
-
+#header{ padding: 1.5rem 0; background: #f1f1fa;}
+#navbar{ display: flex; justify-content: space-between; align-items: center;}
+.logo{ width: 20.4rem; height: 5.8rem;}
+#navbar .humbarger{ display: none; cursor: pointer; font-size: 2.5rem;}
+#navbar .nav-menu ul{ display: flex; justify-content: space-between; align-items: center; text-align: center;}
+#navbar .nav-menu ul li{ padding: 1.2rem;}
+#navbar .nav-menu ul li .signup-btn{ margin-left: 3rem; font-weight: bold;}
+#navbar .nav-menu ul li .log-btn{ margin-right: 3rem; font-weight: bold;}
+#navbar .nav-menu ul li .navbtn{ color: var(--light-pink-color); margin-left: 3rem;}
+#navbar .nav-menu ul li .nav-links:hover, .signup-btn:hover, .log-btn:hover, #navbar .nav-menu ul li .navbtn:hover{ color: var(--theme-color);}
+/* Humbarger */
+#navbar .humbarger{ position: relative; width: 5rem; height: 3rem; text-align: center;;}
+#navbar .humbarger #menu{ position: absolute; top: 0; left: 0; color:var(--theme-color)}
+#navbar .humbarger #close{ position: absolute; top: 0; left: 0; display: none;}
+/*-- ============================ Hero ============================= */
+#hero{ background: var(--theme-color); padding: 10rem 0;}
+#hero .col_1_of_2 h2{ font-size: 4rem; color: var(--white-color); font-family: var(--body-medium-font);font-weight: bold; width: 75%; line-height: 5.5rem;}
+#hero .col_1_of_2 p{ color: var(--white-color); margin: 6rem 0 5rem;}
+#hero .col_1_of_2 img{ width: 80%;}
+#hero .btn-group .btn:nth-child(1){ background: var(--light-pink-color); margin-right:3rem;}
+#hero .btn-group .btn:nth-child(1):hover{ background: var(--balck-color); margin-right:3rem;}
+#hero .btn-group .btn:nth-child(2){ background: var(--white-color); color: var(--balck-color);}
+#hero .btn-group .btn:nth-child(2):hover{ background: var(--light-pink-color);}
+/*-- ============================ Post Section ============================= */
+#post{ padding: 2rem 0;}
+#post .row{ padding: 10rem 0; align-items: center;}
+/* Left Col */
+#post .linfo h3{ font-size: 4rem; font-family: var(--body-medium-font); font-weight: bold; color: var(--light-pink-color); width: 80%; line-height: 5rem;}
+#post .linfo p{ font-family: var(--body-medium-font); font-weight: bold; margin: 2rem 0rem}
+#post .linfo ul{ padding-left: 1.2rem; display: block;}
+#post .linfo ul li{ list-style:disc; padding: 0.4rem 0;}
+/* Right col */
+#post .post-items{ background: var(--post-section-bg-color); padding: 2rem; border-radius: 0.1rem; column-gap: 3rem; row-gap: 1rem;}
+#post .post-items .item{ display: flex; justify-content: start; align-items: center; background: var(--white-color); padding: 0.4rem;}
+#post .post-items .item .post-image{ margin-right: 1rem;;}
+#post .post-items .item h5{ font-size: 1.3rem;}
+#post .post-items .item p{ font-size: 1rem;}
+/*-- ============================ Bank Secure Section ============================= */
+#bank_secure{ padding: 0rem 0 10rem;}
+#bank_secure .item .image{ width: 30rem; height: 40.5rem; margin: 0 auto;}
+#bank_secure .item .item-title h2{ color: var(--theme-color); }
+#bank_secure .item .item-group .item-info{ display: flex; justify-content: start; align-items: center; margin: 2rem 0;}
+#bank_secure .item .item-group .item-info .logo{ width:3.5rem; height: 3.5rem; text-align: center; align-items: center; margin-right: 1rem;}
+#bank_secure .item .item-group .item-info .info p{ font-size: 1.2rem;}
+#bank_secure .item button{ margin-top: 3rem;}
 /*-- ============================ Footer ============================= */
-footer{
-    background: var(--footer-bg-color);
-    padding: 5rem 0;
-    color: var(--white-color);
-}
-.grid-group .item h3{
-    margin-bottom: 2rem;
-}
-.grid-group .item h3,
-.grid-group .item ul li a{
-    color: var(--white-color);
-}
-.grid-group .item ul li{
-    padding: 0.3rem 0;
-}
-.copyright-section{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 10rem;
-}
-.footer-social-icon{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.app{
-    width: 18.53rem;
-    height: 2.7rem;
-    margin-right: 2rem;
-}
-.yft{
-    width: 8rem;
-    height: 2.3rem;
-}
+footer{ background: var(--footer-bg-color); padding: 5rem 0; color: var(--white-color);}
+.grid .item h3{ margin-bottom: 2rem;}
+.grid .item h3, .grid .item ul li a{color: var(--white-color);}
+.grid .item ul li{ padding: 0.3rem 0;}
+.grid .item ul li a:hover{ color: var(--theme-color);transition: all 0.3s ease;}
+.copyright-section{ display: flex; justify-content: space-between; align-items: center; margin-top: 10rem;}
+.footer-social-icon{ display: flex; justify-content: space-between; align-items: center; cursor: pointer;}
+.app{ width: 18.53rem; height: 2.7rem; margin-right: 2rem;}
+.yft{ width: 8rem; height: 2.3rem;}
+.copyright-section .copyright-info a{ color: var(--theme-color); text-decoration: underline;}
