--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -61,6 +61,7 @@ button{ outline: none; border: none;}
 
 /*-- ============================ header ============================= */
 #header{ padding: 1.5rem 0; background: #f1f1fa;}
+nav{ position: fixed; width: 100%; background: #f1f1fa; padding: 1rem 0; top:0; z-index: 1001;}
 #navbar{ display: flex; justify-content: space-between; align-items: center;}
 .logo{ width: 20.4rem; height: 5.8rem;}
 #navbar .humbarger{ display: none; cursor: pointer; font-size: 2.5rem;}
