--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -51,14 +51,13 @@ button{ outline: none; border: none;}
 .grid{ display: grid; grid-template-columns: repeat(5, 1fr); grid-gap: 5rem; justify-items: center;}
 .section-title{ color: var(--black-color); font-size: 4.5rem; text-align: center;}
 .section-details{ margin-top: 2rem; line-height: 3rem;}
-.item-title{ font-size: 1.8rem; font-weight: bold;}
-.btn, .btn-2{ padding: 0.8rem 2rem; color: var(--white-color); font-size: 1.4rem; font-family: var(--heading-font); border-radius: 2rem;}
-.btn{ background: var(--theme-color);}
-.btn-2{ background: var(--btn-bg-color);}
+.item-title{ font-weight: bold; color: var(--theme-color); font-size: 2.5rem; line-height: 5rem;}
+.item .item-details{ margin: 2rem 0;}
+.btn, .btn-2{ padding: 0.8rem 2rem; color: var(--white-color); font-size: 1.4rem; font-family: var(--heading-font); border-radius: 2rem; cursor: pointer;}
+.btn{ background: var(--theme-color); cursor: pointer;}
+.btn-2{ background: var(--btn-bg-color); cursor: pointer;}
 .btn:hover{ background: var(--btn-bg-color); transition: all 0.3s ease;}
 .btn-2:hover{ background: var(--theme-color); transition: all 0.3s ease;}
-
-
 /*-- ============================ header ============================= */
 #header{ padding: 1.5rem 0; background: #f1f1fa;}
 nav{ position: fixed; width: 100%; background: #f1f1fa; padding: 1rem 0; top:0; z-index: 1001;}
@@ -101,11 +100,29 @@ nav{ position: fixed; width: 100%; background: #f1f1fa; padding: 1rem 0; top:0; 
 /*-- ============================ Bank Secure Section ============================= */
 #bank_secure{ padding: 0rem 0 10rem;}
 #bank_secure .item .image{ width: 40rem; height: 50.5rem; margin: 0 auto;}
-#bank_secure .item .item-title h2{ color: var(--theme-color); }
+#bank_secure .item .item-title h2{ color: var(--theme-color); width: 80%; margin-bottom: 3.5rem;}
 #bank_secure .item .item-group .item-info{ display: flex; justify-content: start; align-items: center; margin: 2rem 0;}
 #bank_secure .item .item-group .item-info .logo{ width:3.5rem; height: 3.5rem; text-align: center; align-items: center; margin-right: 1rem;}
 #bank_secure .item .item-group .item-info .info p{ font-size: 1.2rem;}
 #bank_secure .item button{ margin-top: 3rem;}
+/* ==================================== Flexible-work Section =================================== */
+#flexible-section{ padding: 10rem 0; background: var(--light-pink-color);}
+#flexible-section .left { padding-right: 5rem;}
+#flexible-section .left .item-title h2{ color: var(--white-color); width: 80%; }
+#flexible-section .left .item-details p{ color: var(--white-color);}
+#flexible-section .left .btn{ background: var(--white-color); color: var(--balck-color); margin-top: 2rem;}
+#flexible-section .left .btn:hover{ background: var(--balck-color); color: var(--white-color);}
+#flexible-section .right .image { width: 80%; position: relative;}
+#flexible-section .right .payment-info{ width: 20rem; height: 9rem; background: var(--white-color); margin: auto 0; border-radius: 1rem; position: absolute; top: 3rem; right: -13rem;}
+#flexible-section .right .payment-info .title{ background: var(--post-section-bg-color); padding: 0.4rem 0rem 0.4rem 0.5rem; border-top-left-radius: 0.5rem; border-top-right-radius: 0.5rem;}
+#flexible-section .right .payment-info .row{ padding: 0.5rem 1rem; display: flex; justify-content: space-between; align-items: start;}
+#flexible-section .right .payment-info .row .item .deliery-status{ color: var(--theme-color); font-size: 1.1rem;}
+#flexible-section .right .payment-info .row .item .time-status{ font-size: 1rem; color: var(--btn-bg-color); font-weight: bold;}
+#flexible-section .right .payment-info .row .item .pay-amount{ text-align: right;}
+#flexible-section .boost .item-title h2{ color: var(--white-color); font-size: 2.8rem; margin: 8rem 0 6rem; line-height: 4rem;}
+#flexible-section .boost .row{ background: var(--white-color); padding: 4rem 5rem; border-radius: 1rem;}
+
+
 /*-- ============================ Footer ============================= */
 footer{ background: var(--footer-bg-color); padding: 5rem 0; color: var(--white-color);}
 .grid .item h3{ margin-bottom: 2rem;}
