--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -47,9 +47,10 @@ a{ text-decoration: none; color: var(--body-text-color);}
 img{ width: 100%; display: block;}
 button{ outline: none; border: none;}
 .row{ display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 3rem; align-items:end; align-items: center;}
+.group{ display: flex; justify-content: space-between; align-items: center;}
 .col_1_of_2{ flex-basis: 49.5%;}
-.grid{ display: grid; grid-template-columns: repeat(5, 1fr); grid-gap: 5rem; justify-items: center;}
-.section-title{ color: var(--black-color); font-size: 4.5rem; text-align: center;}
+.grid{ display: grid; justify-items: center;}
+.section-title{ font-weight: bold; color: var(--theme-color); font-size: 2.5rem; line-height: 5rem;}
 .section-details{ margin-top: 2rem; line-height: 3rem;}
 .item-title{ font-weight: bold; color: var(--theme-color); font-size: 2.5rem; line-height: 5rem;}
 .item .item-details{ margin: 2rem 0;}
@@ -119,12 +120,23 @@ nav{ position: fixed; width: 100%; background: #f1f1fa; padding: 1rem 0; top:0; 
 #flexible-section .right .payment-info .row .item .deliery-status{ color: var(--theme-color); font-size: 1.1rem;}
 #flexible-section .right .payment-info .row .item .time-status{ font-size: 1rem; color: var(--btn-bg-color); font-weight: bold;}
 #flexible-section .right .payment-info .row .item .pay-amount{ text-align: right;}
-#flexible-section .boost .item-title h2{ color: var(--white-color); font-size: 2.8rem; margin: 8rem 0 6rem; line-height: 4rem;}
+#flexible-section .boost .item-title h2{ color: var(--white-color); font-size: 2.8rem; margin: 8rem 0 6rem; line-height: 4rem; width: 60%;}
 #flexible-section .boost .row{ background: var(--white-color); padding: 4rem 5rem; border-radius: 1rem;}
+/* ==================================== Article Section =================================== */
+#article-section{ padding: 5rem 0;}
+#article-section .section-info{ display: flex; justify-content: space-between; align-items: center;}
+#article-section .section-title h3{ color: var(--theme-color);}
+#article-section .grid { grid-template-columns: repeat(3, 1fr); grid-gap: 5rem; margin-top: 3rem;}
+#article-section .grid .item { border: 0.1rem solid var(--balck-color); border-radius: 0.2rem; width: 100%;}
+#article-section .grid .item .post-info{ padding: 1.5rem;}
+#article-section .grid .item .post-info .post-title { margin: 1rem 0rem 0.5rem;}
+#article-section .grid .item .read-btn a{ margin-top: 2rem; color: var(--theme-color); display: inline-block;}
+#article-section .grid .item .read-btn a:hover{ color: var(--balck-color); transition: all 0.42s ease;}
 
 
 /*-- ============================ Footer ============================= */
 footer{ background: var(--footer-bg-color); padding: 5rem 0; color: var(--white-color);}
+footer .grid {grid-template-columns: repeat(5, 1fr); grid-gap: 5rem;}
 .grid .item h3{ margin-bottom: 2rem;}
 .grid .item h3, .grid .item ul li a{color: var(--white-color);}
 .grid .item ul li{ padding: 0.3rem 0;}
