--- a/resources/css/responsive.css
+++ b/resources/css/responsive.css
@@ -34,10 +34,14 @@
     #hero .row h2{ width: 100%;}
     #post .linfo h3{ width: 100%;}
     #post .linfo ul li{ list-style:none;}
-    .post-items { text-align: left}
+    .post-items{ text-align: left}
 /*-- ============================ Bank Secure Section ============================= */
     #bank_secure .item .item-group .item-info{ align-items: left; text-align: left;}
     #bank_secure .item .item-title h2 { width: 100%; margin-top: 4rem;}
+/*-- ============================ Top Categories ============================= */
+    #top-categories .grid{ grid-template-columns: repeat(1, 1fr); width: 100%;}
+    #top-categories .grid .item{ text-align: center; margin-bottom: 3rem;}
+    #top-categories .grid .section-logo{ margin: 0 auto;}
 /*-- ============================ Footer Section ============================= */
     #footer .container .grid{ grid-template-columns: repeat(2, 1fr); grid-gap: 5rem;}
     #footer .grid .item h3 { margin-bottom: 1.5rem; border-bottom: 0.3rem solid var(--theme-color);}
@@ -55,4 +59,6 @@
     .btn-group{ display: grid; grid-template-columns: repeat(1, 1fr); grid-gap: 1rem;}
     #hero .btn-group .btn:nth-child(1){ margin-right: 0;}
     #hero .btn-group .btn:nth-child(1):hover { margin-right: 0;}
+/*-- ============================ Top Categories ============================= */
+    #top-categories .categories-items{ grid-template-columns: repeat(2, 1fr); margin-top: 3rem;}
 }
